// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Property /> can render a basic property 1`] = `
<tr
  className="property last"
  onClick={undefined}
>
  <td
    className="property-name"
  >
    <span>
      type
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      string
    </span>
    <span
      className="property-required"
    >
      Required
    </span>
  </td>
</tr>
`;

exports[`<Property /> can render a property with a format 1`] = `
<tr
  className="property"
  onClick={undefined}
>
  <td
    className="property-name"
  >
    <span>
      value
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      string
      <span
        className="property-format"
      >
        &lt;
        email
        &gt;
      </span>
    </span>
  </td>
</tr>
`;

exports[`<Property /> can render a property with a subtype 1`] = `
<tr
  className="property"
  onClick={undefined}
>
  <td
    className="property-name"
  >
    <span>
      data
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      <span
        className="property-subtype"
      >
        object
        []
      </span>
    </span>
  </td>
</tr>
`;

exports[`<Property /> can render a property with description 1`] = `
<tr
  className="property"
  onClick={undefined}
>
  <td
    className="property-name"
  >
    <span>
      type
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      string
    </span>
    <span
      className="property-required"
    >
      Required
    </span>
    <StringProperty
      constraints={undefined}
    />
    <Description
      description="This is _markdown_ text"
    />
  </td>
</tr>
`;

exports[`<Property /> can render a property with enum 1`] = `
<tr
  className="property"
  onClick={undefined}
>
  <td
    className="property-name"
  >
    <span>
      packagingType
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      string
    </span>
    <span
      className="property-required"
    >
      Required
    </span>
    <div>
      <span>
        Valid values:
      </span>
      <span
        className="enum"
      >
        box
      </span>
      <span
        className="enum"
      >
        carton
      </span>
    </div>
  </td>
</tr>
`;

exports[`<Property /> can render a property with multiple types 1`] = `
<tr
  className="property"
  onClick={undefined}
>
  <td
    className="property-name"
  >
    <span>
      value
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      string, number
    </span>
  </td>
</tr>
`;

exports[`<Property /> can render a property with numerical constraints 1`] = `
<tr
  className="property"
  onClick={undefined}
>
  <td
    className="property-name"
  >
    <span>
      type
    </span>
  </td>
  <td
    className="property-info"
  >
    <span
      className="property-type"
    >
      number
    </span>
    <span
      className="property-required"
    >
      Required
    </span>
    <NumericProperty
      constraints={
        Object {
          "multipleOf": 2,
        }
      }
    />
  </td>
</tr>
`;
